# hb-platform-user-management-fresh

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.circleci/: config.yml
alembic/: env.py
alembic/versions/: 103dce7bb1d3_deleted_deprecated_gcpuser_role_column.py  106eebb0f782_added_cascade_deletion_to_clientfarm_.py  2177278fa1f0_added_securitytoken_db_model.py  35b59a5cb17e_added_unique_constraint_to_gcpuser_email.py  35ce987befa7_added_clientapitoken_db_model.py  39fbd0489466_added_cascade_deletion_to_m2m_client_.py  72204bdeeeda_make_gcpuser_uuid_a_primary_key_in_.py  7b1549b6bf76_changed_clientuser_role_to_an_enum_type.py  867335022b05_added_staff_boolean_column_to_gcpuser_.py  92a3d4441ca8_add_callback_url_to_client_model.py  9cdef615dbb5_clientuser_association_model.py  9d82a65722dd_removed_clientfarm_db_model.py  a0428263f115_added_capability_db_table_and_.py  a183f6a5404a_added_creation_timestamps_to_.py  c1b7cee81a98_client_name_made_unique.py  dc07f1564306_initial_status.py
requirements/: base.txt  development.txt
tests/: __init__.py  conftest.py  factories.py  test.env
tests/auth/: mocks.py  test_capability_auth.py  test_client_auth.py  test_gcp_user_auth.py  test_login.py  test_request_user_check.py
tests/repositories/: test_alchemy_repository.py
tests/routers/: test_capability.py  test_client.py  test_client_farm.py  test_gcp_user.py
user_management/: main.py  models.py  routers.py  schemas.py
user_management/core/: database.py  dependencies.py  exceptions.py  firebase.py  security.py
user_management/domain/: model.py
user_management/repositories/: __init__.py  base.py  capability.py  client.py  client_farm.py  gcp_user.py  security_token.py
user_management/routers/: capability.py  client.py  client_farm.py  gcp_user.py  login.py  sentry.py
(+12 files in other folders)
