[tool.poetry]
name = "hb-platform-user-management"
version = "0.0.1"
description = "Hummingbird Platform users management service"
authors = ["HB Engineering <dev@hummingbirdtech.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
SQLAlchemy = "^1.4.26"
alembic = "^1.7.5"
psycopg2-binary = "^2.9.2"
fastapi = "^0.70.0"
gunicorn = "^20.1.0"
uvicorn = "^0.15.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
black = "^21.10b0"
mypy = "^0.910"
pre-commit = "^2.15.0"
pylint = "^2.11.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
