[tool.poetry]
name = "hb-platform-user-management"
version = "0.0.1"
description = "Hummingbird Platform users management service"
authors = ["HB Engineering <dev@hummingbirdtech.com>"]
license = "Proprietary"
packages = [
    {include = "user_management"}
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
SQLAlchemy = "^1.4.26"
alembic = "^1.7.5"
psycopg2-binary = "^2.9.2"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.2"}
firebase-admin = "^5.1.0"
requests = "^2.26.0"
virtualenv = "^20.10.0"
google-cloud-pubsub = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sentry-sdk = "^1.5.8"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
mypy = "^0.910"
pre-commit = "^2.15.0"
pylint = "^2.11.1"
pytest = "^6.2.5"
factory-boy = "^3.2.1"
pytest-cov = "^3.0.0"
types-requests = "^2.27.14"
pytest-asyncio = "^0.18.3"

[tool.poetry.scripts]
user_management = "user_management.main:create_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
